<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtNomeAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Informe nome do Aluno"
            android:ems="10"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/txtNota1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/informe_nota_1"
            android:inputType="numberDecimal"
            />

        <EditText
            android:id="@+id/txtNota2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/informe_nota_2"
            android:inputType="numberDecimal"
            />

        <EditText
            android:id="@+id/txtNota3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/informe_nota_3"
            android:inputType="numberDecimal"
            />

        <Button
            android:id="@+id/btnAddAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="adicionarAluno"
            android:text="Adicionar" />

        <ListView
            android:id="@+id/listaAluno"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>